--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,8 +1,11 @@
+version: '3'
+
 services:
   server:
     image: andrewstucki/light:latest
     env_file: .env
-    command: [ "server", "--address", "0.0.0.0", "--token", "$$TOKEN", "--enable-acme-email", "$$EMAIL", "--host", "$$HOST" ]
+    restart: always
+    command: [ "server", "--address", "0.0.0.0", "--token", "$TOKEN", "--enable-acme-email", "$EMAIL", "--host", "$HOST" ]
     ports:
       - "443:443"
       - "8443:8443"
